@@ -1,3 +1,9 @@
+xxx, beta5
+
+ * mkfs.s3ql now makes strict checks on the bucket name
+ 
+ * Removed obsolete mount.s3ql_local from distribution
+
 2010-02-19, beta4
 
     * tune.s3ql now has a --copy option to copy buckets
